# OrderingApp

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
back/: .pylintrc  Dockerfile  pyproject.toml
back/src/: main.py
back/src/database/: database.py
back/src/routers/: drinks.py  orders.py
front/: Dockerfile  README.md  package.json  tailwind.config.js
front/src/: App.vue  Drink.vue  ListDrinks.vue  Login.vue  main.js
front/src/components/: DrinkCard.vue  ListDrinks.vue  Login.vue  LoginForm.vue
